// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatesInterval /> should shallow a full date 1`] = `
<FormattedMessage
  id="global.dates.full.days"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2019-04-10T00:46:47.000Z}
        year="numeric"
      />,
      "endT": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2019-04-10T00:46:47.000Z}
      />,
      "startD": <FormattedDate
        day="numeric"
        month="long"
        value={2019-03-08T08:39:58.000Z}
        year="numeric"
      />,
      "startT": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2019-03-08T08:39:58.000Z}
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow a full date without end & start time 1`] = `
<FormattedMessage
  id="global.dates.between"
  values={
    Object {
      "end": <FormattedDate
        day="numeric"
        month="long"
        value={2018-02-03T23:00:00.000Z}
        year="numeric"
      />,
      "start": <FormattedDate
        day="numeric"
        month="long"
        value={2018-01-25T23:00:00.000Z}
        year="numeric"
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow a full date without end time 1`] = `
<FormattedMessage
  id="global.dates.full.days.endNoTime"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-02-03T23:00:00.000Z}
        year="numeric"
      />,
      "startD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-01-26T02:00:00.000Z}
        year="numeric"
      />,
      "startT": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2018-01-26T02:00:00.000Z}
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow a full date without start time 1`] = `
<FormattedMessage
  id="global.dates.full.days.startNoTime"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-02-04T03:00:00.000Z}
        year="numeric"
      />,
      "endT": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2018-02-04T03:00:00.000Z}
      />,
      "startD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-01-25T23:00:00.000Z}
        year="numeric"
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow correctly end date 1`] = `
<FormattedMessage
  id="global.dates.endDate"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-02-10T09:00:24.000Z}
        year="numeric"
      />,
      "endT": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2018-02-10T09:00:24.000Z}
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow correctly end date without end time 1`] = `
<FormattedMessage
  id="global.dates.endDate.endNoTime"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2018-02-10T00:00:00.000Z}
        year="numeric"
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow correctly past date 1`] = `
<FormattedMessage
  id="global.dates.pastDate"
  values={
    Object {
      "endD": <FormattedDate
        day="numeric"
        month="long"
        value={2017-02-01T00:00:00.000Z}
        year="numeric"
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow correctly start date 1`] = `
<FormattedMessage
  id="global.dates.full_day"
  values={
    Object {
      "date": <FormattedDate
        day="numeric"
        month="long"
        value={2018-01-26T02:00:00.000Z}
        year="numeric"
      />,
      "time": <FormattedTime
        hour="numeric"
        minute="numeric"
        value={2018-01-26T02:00:00.000Z}
      />,
    }
  }
/>
`;

exports[`<DatesInterval /> should shallow null 1`] = `""`;
